API changes, tests for Hippo.
Yay!